--- a/index.html
+++ b/index.html
@@ -827,9 +827,7 @@
                 <h2>Contact me</h2>
             </div>
             <div style="grid-area: c;">
-               <video autoplay loop muted playsinline height="400">
-  <source src="img/LogoAnimation.mp4" type="video/mp4">
-</video>
+              <img src="/img/LogoGif.gif" alt="Bety Vega Logo Animation" height="400">
             </div>
             <div style="grid-area: d;">
                 <div id="header" style="margin:10px 0;">
