--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
                 <h2>Contact me</h2>
             </div>
             <div style="grid-area: c;">
-              <img src="/img/LogoGif.gif" alt="Bety Vega Logo Animation" height="400">
+             <img src="img/LogoGif.gif?v=2" alt="Logo">
             </div>
             <div style="grid-area: d;">
                 <div id="header" style="margin:10px 0;">
