--- a/index.html
+++ b/index.html
@@ -599,6 +599,10 @@
                         <iframe width="1040" height="585" src="https://www.youtube.com/embed/FkBJQC18axg?si=9zMgQIJv60-pg0hV" allowfullscreen></iframe>
                     </div>
 
+                    <h5 style="color: #202932; text-align: center;">
+                        <a href=" https://tecmx-my.sharepoint.com/:f:/g/personal/a01704468_tec_mx/EvFDAw_Ghl1PhUqJScyMdeUBbsWZ-N7MmT-UoVBAY1Vrxw?e=ChjAYg" target="_blank"> Download demo!</a> 
+                    </h5>
+
                     <!-- First Section -->
                     <div class="blog-section">
                         <h4 style="color: #b9b83a;">Creating the Painting</h4>
