--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                     </div>
 
                     <h5 style="color: #202932; text-align: center;">
-                        <a href=" https://tecmx-my.sharepoint.com/:f:/g/personal/a01704468_tec_mx/EvFDAw_Ghl1PhUqJScyMdeUBbsWZ-N7MmT-UoVBAY1Vrxw?e=ChjAYg" target="_blank"> Download demo!</a> 
+                        <a href=" https://tecmx-my.sharepoint.com/:f:/g/personal/a01704468_tec_mx/EvFDAw_Ghl1PhUqJScyMdeUBbsWZ-N7MmT-UoVBAY1Vrxw?e=ChjAYg" target="_blank"> Download demo! (Not fully optimized yet)</a> 
                     </h5>
 
                     <!-- First Section -->
