--- a/index.html
+++ b/index.html
@@ -477,8 +477,7 @@
                     </div>
                     <div class="cell-item" style="grid-area: c;">
                         <h5>
-                            Stylized 3D digital sculpture inspired by medieval scribes.
-                            Retopology of the 3D, UVs, and baking using low poly and high poly models.<br><br>
+                            Stylized 3D digital sculpture inspired by medieval scribes.<br><br>
                             Responsabilities:
                         </h5>
                         <h5 style="text-align: left; padding-left: 5%;">
